Adapted to fair.
git-svn-id: https://subversion.gsi.de/fairroot/fairbase/release@14857 0381ead4-6506-0410-b988-94b70fbc4730

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,12 +3,12 @@
 # The extension is already found.  Any number of sources could be listed here.
 
 set(INCLUDE_DIRECTORIES
-${ROOT_INCLUDE_DIR} 
-${CMAKE_SOURCE_DIR}/geobase 
-${CMAKE_SOURCE_DIR}/base 
-${CMAKE_SOURCE_DIR}/db  
-${CMAKE_SOURCE_DIR}/db/dbValidation
-${CMAKE_SOURCE_DIR}/db/dbInterface
+${ROOT_INCLUDE_DIR}
+${CMAKE_SOURCE_DIR}/geobase
+${CMAKE_SOURCE_DIR}/base
+${CMAKE_SOURCE_DIR}/dbase
+${CMAKE_SOURCE_DIR}/dbase/dbValidation
+${CMAKE_SOURCE_DIR}/dbase/dbInterface
 )
 
 include_directories( ${INCLUDE_DIRECTORIES})
@@ -20,7 +20,7 @@ ${CMAKE_SOURCE_DIR}/base
  
 link_directories( ${LINK_DIRECTORIES})
 
-set(R3BDB_SRCS
+set(FAIRDB_SRCS
 dbValidation/Experiment.cxx
 dbValidation/Detector.cxx
 dbValidation/SimFlag.cxx
@@ -71,23 +71,23 @@ dbInterface/FairDbSimFlagAssociation.cxx
 
 
 if(RULE_CHECKER_FOUND)
-CHECK_RULES("${R3BDB_SRCS}" "${INCLUDE_DIRECTORIES}" R3BDB_RULES)
+CHECK_RULES("${FAIRDB_SRCS}" "${INCLUDE_DIRECTORIES}" FAIRDB_RULES)
 endif(RULE_CHECKER_FOUND)
 
 # fill list of header files from list of source files
 # by exchanging the file extension
-CHANGE_FILE_EXTENSION(*.cxx *.h R3BDB_HEADERS "${R3BDB_SRCS}")
-SET( R3BDB_HEADERS ${R3BDB_HEADERS} ${CMAKE_SOURCE_DIR}/db/dbInterface/FairDbResPtr.h ${CMAKE_SOURCE_DIR}/db/dbInterface/FairDbWriter.h)
+CHANGE_FILE_EXTENSION(*.cxx *.h FAIRDB_HEADERS "${FAIRDB_SRCS}")
+SET( FAIRDB_HEADERS ${FAIRDB_HEADERS} ${CMAKE_SOURCE_DIR}/dbase/dbInterface/FairDbResPtr.h ${CMAKE_SOURCE_DIR}/dbase/dbInterface/FairDbWriter.h)
 
-set(R3BDB_LINKDEF  R3BDBLinkDef.h)
-set(R3BDB_DICTIONARY ${CMAKE_CURRENT_BINARY_DIR}/R3BDBDict.cxx)
+set(FAIRDB_LINKDEF  FairDBLinkDef.h)
+set(FAIRDB_DICTIONARY ${CMAKE_CURRENT_BINARY_DIR}/FAIRDBDict.cxx)
 
-ROOT_GENERATE_DICTIONARY("${R3BDB_HEADERS}" "${R3BDB_LINKDEF}" "${R3BDB_DICTIONARY}" "${INCLUDE_DIRECTORIES}")
+ROOT_GENERATE_DICTIONARY("${FAIRDB_HEADERS}" "${FAIRDB_LINKDEF}" "${FAIRDB_DICTIONARY}" "${INCLUDE_DIRECTORIES}")
 
-SET(R3BDB_SRCS ${R3BDB_SRCS} ${R3BDB_DICTIONARY})
+SET(FAIRDB_SRCS ${FAIRDB_SRCS} ${FAIRDB_DICTIONARY})
 
-add_library(R3BDB SHARED ${R3BDB_SRCS})
-target_link_libraries(R3BDB ${ROOT_LIBRARIES})
-set_target_properties(R3BDB PROPERTIES ${FAIRROOT_LIBRARY_PROPERTIES})
+add_library(FAIRDB SHARED ${FAIRDB_SRCS})
+target_link_libraries(FAIRDB ${ROOT_LIBRARIES})
+set_target_properties(FAIRDB PROPERTIES ${FAIRROOT_LIBRARY_PROPERTIES})
 ################ install ###################
-install(TARGETS R3BDB DESTINATION ${CMAKE_BINARY_DIR}/lib)
+install(TARGETS FAIRDB DESTINATION ${CMAKE_BINARY_DIR}/lib)
