git-svn-id: https://subversion.gsi.de/fairroot/fairbase/release@14880 0381ead4-6506-0410-b988-94b70fbc4730

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -78,9 +78,9 @@ dbIO/FairParTSQLIo.h
 )
 
 
-if(RULE_CHECKER_FOUND)
-CHECK_RULES("${FAIRDB_SRCS}" "${INCLUDE_DIRECTORIES}" FAIRDB_RULES)
-endif(RULE_CHECKER_FOUND)
+# if(RULE_CHECKER_FOUND)
+# CHECK_RULES("${FAIRDB_SRCS}" "${INCLUDE_DIRECTORIES}" FAIRDB_RULES)
+# endif(RULE_CHECKER_FOUND)
 
 # fill list of header files from list of source files
 # by exchanging the file extension
