+ New implementation. + FairTSQLObject.
git-svn-id: https://subversion.gsi.de/fairroot/fairbase/release@15431 0381ead4-6506-0410-b988-94b70fbc4730

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,6 +10,7 @@ ${CMAKE_SOURCE_DIR}/parbase
 ${CMAKE_SOURCE_DIR}/dbase
 ${CMAKE_SOURCE_DIR}/dbase/dbInterface
 ${CMAKE_SOURCE_DIR}/dbase/dbValidation
+${CMAKE_SOURCE_DIR}/dbase/dbUtils
 )
 
 include_directories( ${INCLUDE_DIRECTORIES})
@@ -67,6 +68,8 @@ dbInterface/FairDbExceptionLog.cxx
 dbInterface/FairDbServices.cxx
 dbInterface/FairDbValRecSet.cxx
 dbInterface/FairDbSimFlagAssociation.cxx
+#### FairTSQLObject
+dbUtils/FairTSQLObject.cxx
 )
 
 
