new dbase module
git-svn-id: https://subversion.gsi.de/fairroot/fairbase/trunk@19217 0381ead4-6506-0410-b988-94b70fbc4730

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,6 +11,8 @@ ${CMAKE_SOURCE_DIR}/dbase
 ${CMAKE_SOURCE_DIR}/dbase/dbInterface
 ${CMAKE_SOURCE_DIR}/dbase/dbValidation
 ${CMAKE_SOURCE_DIR}/dbase/dbUtils
+${CMAKE_SOURCE_DIR}/input/db
+${CMAKE_SOURCE_DIR}/dbase/dbInput
 )
 
 include_directories( ${INCLUDE_DIRECTORIES})
