FairDb Logging Mechanism included
git-svn-id: https://subversion.gsi.de/fairroot/fairbase/trunk@20587 0381ead4-6506-0410-b988-94b70fbc4730

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -75,8 +75,13 @@ dbInterface/FairDbServices.cxx
 dbInterface/FairDbValRecSet.cxx
 dbInterface/FairDbSimFlagAssociation.cxx
 dbInterface/FairDbStreamer.cxx
-#### FairTSQLObject
 dbUtils/FairTSQLObject.cxx
+dbUtils/FairDbLog.cxx
+dbUtils/FairDbLogFormat.cxx
+dbUtils/FairDbLogOSStream.cxx
+dbUtils/FairDbLogService.cxx
+dbUtils/FairDbLogStat.cxx
+dbUtils/FairDbLogStream.cxx
 )
 
 
