Continue modifying the cake configuration file to support the  new distribution method
Building FairRoot as separate package that can be used by CbmRoot,
PandaRoot, etc

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -83,6 +83,8 @@ dbUtils/FairDbLogStat.cxx
 dbUtils/FairDbLogStream.cxx
 )
 
+install(FILES "dbInput/db_detector_def.h" DESTINATION include)
+install(FILES "dbInput/prepare_db.sql" DESTINATION share/dbInput)
 
 CHANGE_FILE_EXTENSION(*.cxx *.h HEADERS "${SRCS}")
 SET( HEADERS ${HEADERS} ${CMAKE_SOURCE_DIR}/dbase/dbInterface/FairDbReader.h ${CMAKE_SOURCE_DIR}/dbase/dbInterface/FairDbWriter.h)
