Build corrections for CLANG ( problem with includes?)
correction for clang added

change in recoTask ( ROOT output only in RuntimeDB)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,7 @@
  #         GNU Lesser General Public Licence version 3 (LGPL) version 3,        #  
  #                  copied verbatim in the file "LICENSE"                       #
  ################################################################################
-# Create a library called "libFAIRDB" which includes the source files given in
+# Create a library called "libFairDB" which includes the source files given in
 # the array .
 # The extension is already found.  Any number of sources could be listed here.
 
@@ -28,12 +28,17 @@ ${CMAKE_SOURCE_DIR}/dbase/dbInput
 
 include_directories( ${INCLUDE_DIRECTORIES})
 
+
+# ---- Libraries
 set(LINK_DIRECTORIES
 ${ROOT_LIBRARY_DIR}
 )
- 
+
+
 link_directories( ${LINK_DIRECTORIES})
 
+
+# ----- FairDb Code 
 set(SRCS
 dbValidation/Experiment.cxx
 dbValidation/Detector.cxx
@@ -98,13 +103,15 @@ install(FILES "dbInput/db_detector_def.h" DESTINATION include)
 install(FILES "dbInput/prepare_db.sql" DESTINATION share/dbInput)
 
 CHANGE_FILE_EXTENSION(*.cxx *.h HEADERS "${SRCS}")
-SET( HEADERS ${HEADERS} ${CMAKE_SOURCE_DIR}/dbase/dbInterface/FairDbReader.h ${CMAKE_SOURCE_DIR}/dbase/dbInterface/FairDbWriter.h)
-Set(LINKDEF FairDBLinkDef.h)
-Set(LIBRARY_NAME FairDB)
-Set(DEPENDENCIES Net RIO Cint Core)
+set(HEADERS ${HEADERS} ${CMAKE_SOURCE_DIR}/dbase/dbInterface/FairDbReader.h ${CMAKE_SOURCE_DIR}/dbase/dbInterface/FairDbWriter.h)
+set(LINKDEF FairDBLinkDef.h)
+set(LIBRARY_NAME FairDB)
+
+set(DEPENDENCIES Net RIO Cint Core)
 
 GENERATE_LIBRARY()
 
-
-
+#if (ZMQ_FOUND AND Boost_FOUND)
+#add_subdirectory(dbMQ)
+#endif()
 
