add ZeroMQ dependency to dbMQ for the case when FairMQ is compiled with nanomsg

--- a/dbMQ/CMakeLists.txt
+++ b/dbMQ/CMakeLists.txt
@@ -53,7 +53,7 @@ set(LIBRARY_NAME FairDbMQ)
 
 if (Boost_FOUND)
   set(DEPENDENCIES
-    Base FairDB ParBase FairMQ boost_thread boost_system boost_serialization)
+    Base FairDB ParBase FairMQ ${ZMQ_LIBRARY_SHARED} boost_thread boost_system boost_serialization)
 else (Boost_FOUND)
   set(DEPENDENCIES Base  FairDB ParBase)
 endif (Boost_FOUND)
