--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,33 +9,35 @@
 # the array .
 # The extension is already found.  Any number of sources could be listed here.
 
-set(INCLUDE_DIRECTORIES
-${ROOT_INCLUDE_DIR}
-${CMAKE_SOURCE_DIR}/fairtools
-${CMAKE_SOURCE_DIR}/base
-${CMAKE_SOURCE_DIR}/base/steer
-${CMAKE_SOURCE_DIR}/base/event
-${CMAKE_SOURCE_DIR}/base/field
-${CMAKE_SOURCE_DIR}/base/sim
-${CMAKE_SOURCE_DIR}/parbase
-${CMAKE_SOURCE_DIR}/dbase
-${CMAKE_SOURCE_DIR}/dbase/dbInterface
-${CMAKE_SOURCE_DIR}/dbase/dbValidation
-${CMAKE_SOURCE_DIR}/dbase/dbUtils
-${CMAKE_SOURCE_DIR}/input/db
-${CMAKE_SOURCE_DIR}/dbase/dbInput
+Set(INCLUDE_DIRECTORIES
+  ${CMAKE_SOURCE_DIR}/fairtools
+  ${CMAKE_SOURCE_DIR}/base
+  ${CMAKE_SOURCE_DIR}/base/steer
+  ${CMAKE_SOURCE_DIR}/base/event
+  ${CMAKE_SOURCE_DIR}/base/field
+  ${CMAKE_SOURCE_DIR}/base/sim
+  ${CMAKE_SOURCE_DIR}/parbase
+  ${CMAKE_SOURCE_DIR}/dbase
+  ${CMAKE_SOURCE_DIR}/dbase/dbInterface
+  ${CMAKE_SOURCE_DIR}/dbase/dbValidation
+  ${CMAKE_SOURCE_DIR}/dbase/dbUtils
+  ${CMAKE_SOURCE_DIR}/input/db
+  ${CMAKE_SOURCE_DIR}/dbase/dbInput
 )
 
-include_directories( ${INCLUDE_DIRECTORIES})
+Set(SYSTEM_INCLUDE_DIRECTORIES
+  ${ROOT_INCLUDE_DIR}
+)
 
+Include_Directories(${INCLUDE_DIRECTORIES})
+Include_Directories(SYSTEM ${SYSTEM_INCLUDE_DIRECTORIES})
 
 # ---- Libraries
-set(LINK_DIRECTORIES
-${ROOT_LIBRARY_DIR}
+Set(LINK_DIRECTORIES
+  ${ROOT_LIBRARY_DIR}
 )
 
-
-link_directories( ${LINK_DIRECTORIES})
+Link_Directories(${LINK_DIRECTORIES})
 
 
 # ----- FairDb Code 
