FairDb Automatic Distribution

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -129,7 +129,8 @@ endif()
 GENERATE_LIBRARY()
 
 if (ZMQ_FOUND AND Boost_FOUND)
-add_subdirectory(dbMQ)
+  add_subdirectory(dbMQ)
+  add_subdirectory(dbDS)
 endif()
 
 find_package(Wt)
