Add new class for strip test

--- a/dbExamples/cbm_sts/src/CMakeLists.txt
+++ b/dbExamples/cbm_sts/src/CMakeLists.txt
@@ -26,6 +26,7 @@ set(SRCS
 CbmStsDbQaContFact.cxx
 CbmStsDbQaIvPar.cxx
 CbmStsDbQaIvNewPar.cxx
+CbmStsDbQaCvNewPar.cxx
 CbmStsDbQaChannelMapPar.cxx
 CbmStsDbQaGeometryPar.cxx
 CbmStsDbQaOwnershipPar.cxx
@@ -36,12 +37,29 @@ CbmStsDbQaSensorNewPar.cxx
 CbmStsDbQaNewPar.cxx
 CbmStsDbSNoisyChPar.cxx
 CbmStsDbSInfoPar.cxx
+CbmStsDbQa.cxx
+CbmStsDbQaSUID.cxx
+CbmStsDbQaSensor.cxx
+CbmStsDbQaIv.cxx
+CbmStsDbQaCv.cxx
+StsSensorBatch.cxx
+StsDefect.cxx
+StsDefectContext.cxx
+StsDefectType.cxx
+StsInspectionImage.cxx
+StsOpticalInspection.cxx
+StsSensor.cxx
+StsSensorLocation.cxx
+StsSensorType.cxx
+StsSensorVendor.cxx
+CbmStsDbQaStrip.cxx
 )
 
 set(HEADERS
 CbmStsDbQaContFact.h
 CbmStsDbQaIvPar.h
 CbmStsDbQaIvNewPar.h
+CbmStsDbQaCvNewPar.h
 CbmStsDbQaChannelMapPar.h
 CbmStsDbQaGeometryPar.h
 CbmStsDbQaOwnershipPar.h
@@ -52,6 +70,22 @@ CbmStsDbQaSensorNewPar.h
 CbmStsDbQaNewPar.h
 CbmStsDbSNoisyChPar.h
 CbmStsDbSInfoPar.h
+CbmStsDbQa.h
+CbmStsDbQaSUID.h
+CbmStsDbQaSensor.h
+CbmStsDbQaIv.h
+CbmStsDbQaCv.h
+StsSensorBatch.h
+StsDefect.h
+StsDefectContext.h
+StsDefectType.h
+StsInspectionImage.h
+StsOpticalInspection.h
+StsSensor.h
+StsSensorLocation.h
+StsSensorType.h
+StsSensorVendor.h
+CbmStsDbQaStrip.h
 ${CMAKE_SOURCE_DIR}/dbase/dbInterface/FairDbReader.h
 ${CMAKE_SOURCE_DIR}/dbase/dbInterface/FairDbWriter.h
 )
